--- a/POS-FrontEnd/src/lk/ijse/gdse66/index.html
+++ b/POS-FrontEnd/src/lk/ijse/gdse66/index.html
@@ -19,6 +19,7 @@
 
 
 </head>
+
 <body>
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -98,6 +99,7 @@
 </section>
 
 <section id="CustomerFormManage">
+    <h2 style="margin: 20px"><i class="fa-solid fa-list-check"></i>   Customer Manage</h2>
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col-5 mb-3">
@@ -108,22 +110,22 @@
                             <div class="row mb-4 justify-content-center">
                                 <div class="mb-1">
                                     <label for="txtCustomerID">Customer ID</label>
-                                    <input class="form-control" id="txtCustomerID" required type="text">
+                                    <input class="form-control" id="txtCustomerID" name="txtCustomerID" required type="text">
                                     <span class="control-error" id="lblcusid"></span>
                                 </div>
                                 <div class="mb-1">
                                     <label for="txtCustomerName">Customer Name</label>
-                                    <input class="form-control" id="txtCustomerName" type="text">
+                                    <input class="form-control" id="txtCustomerName" name="txtCustomerName" type="text">
                                     <span class="control-error" id="lblcusname"></span>
                                 </div>
                                 <div class="mb-1">
                                     <label for="txtCustomerAddress">Customer Address</label>
-                                    <input class="form-control" id="txtCustomerAddress" type="text">
+                                    <input class="form-control" id="txtCustomerAddress" name="txtCustomerAddress" type="text">
                                     <span class="control-error" id="lblcusaddress"></span>
                                 </div>
                                 <div class="mb-1">
-                                    <label for="txtCustomerSalary">Customer Salary</label>
-                                    <input class="form-control" id="txtCustomerSalary" type="text">
+                                    <label for="txtCustomerContact">Customer Contact</label>
+                                    <input class="form-control" id="txtCustomerContact" name="txtCustomerContact" type="text">
                                     <span class="control-error" id="lblcussalary"></span>
                                 </div>
                                 <div class="btn-group " role="group" aria-label="Basic example">
@@ -148,7 +150,7 @@
                         <th>Customer ID</th>
                         <th>Customer Name</th>
                         <th>Customer Address</th>
-                        <th>Customer Salary</th>
+                        <th>Customer Contact</th>
                     </tr>
                     </thead>
 
@@ -163,7 +165,7 @@
 </section>
 
 <section id="ItemFormManage">
-
+    <h2 style="margin: 20px"><i class="fa-solid fa-list-check"></i>   Item Manage</h2>
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col">
