--- a/POS-FrontEnd/src/lk/ijse/gdse66/index.html
+++ b/POS-FrontEnd/src/lk/ijse/gdse66/index.html
@@ -16,6 +16,7 @@
     <script src="assest/code.jquery.com_jquery-3.7.1.min.js"></script>
 
 
+
 </head>
 <body>
 <header>
@@ -188,13 +189,14 @@
                                     <label for="txtQty" class="form-label">Item Qty :</label>
                                     <input type="text" class="form-control mb-3" id="txtQty">
                                 </div>
+
                                 <div class="btn-group " role="group" aria-label="Basic example">
                                     <button id="btnItem" type="button" class="btn btn-danger" style="width: 100px">Save</button>
                                     <button id="btnItemUpdate" type="button" class="btn btn-warning" style="width: 100px">Update</button>
                                     <button id="btnItemDelete" type="button" class="btn btn-success" style="width: 100px">Delete</button>
                                 </div>
                                 <div class="btn-group m-3" role="group" aria-label="Basic example">
-                                    <button id="btnItemGetAll" type="button" class="btn btn-warning" style="width: 100px">GetAll</button>
+                                    <button id="btnGetAllItem" type="button" class="btn btn-warning" style="width: 100px">GetAll</button>
                                     <button id="btnItemClear" type="button" class="btn btn-success" style="width: 100px">Clear</button>
                                 </div>
                             </div>
@@ -213,7 +215,7 @@
                     </tr>
                     </thead>
 
-                    <tbody id="tblItem">
+                    <tbody id="itemTable">
 
                     <!-- <tr>
                         <th scope="row"></th>
@@ -365,7 +367,7 @@
 <script src="assest/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 <script src="controller/DashboardController.js"></script>
 <script src="controller/CustomerController.js"></script>
-
+<script src="controller/ItemController.js"></script>
 
 
 
